CompilerPrinciples/实验二/parser.output
Terminals unused in grammar

   DPLUS
   DMINUS
   ASSIGNOP_MINUS
   ASSIGNOP_PLUS
   ASSIGNOP_DIV
   ASSIGNOP_STAR
   SWITCH
   CASE
   COLON
   DEFAULT
   ARRAY
   EXP_STRUCT


State 72 conflicts: 1 shift/reduce
State 73 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 98 conflicts: 1 shift/reduce, 11 reduce/reduce
State 105 conflicts: 1 shift/reduce
State 110 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 115 conflicts: 1 shift/reduce
State 117 conflicts: 1 shift/reduce
State 118 conflicts: 1 shift/reduce
State 119 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 129 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: ExtDefList

    2 ExtDefList: /* empty */
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier FuncDec CompSt
    6       | error SEMI

    7 Specifier: TYPE
    8          | StructSpecifier

    9 StructSpecifier: STRUCT StructName LC DefList RC
   10                | STRUCT ID

   11 StructName: /* empty */
   12           | ID

   13 ExtDecList: VarDec
   14           | VarDec COMMA ExtDecList

   15 VarDec: ID
   16       | VarDec LB INT RB

   17 FuncDec: ID LP VarList RP
   18        | ID LP RP

   19 VarList: ParamDec
   20        | ParamDec COMMA VarList

   21 ParamDec: Specifier VarDec

   22 CompSt: LC DefList StmList RC

   23 StmList: /* empty */
   24        | Stmt StmList

   25 Stmt: Exp SEMI
   26     | CompSt
   27     | RETURN Exp SEMI
   28     | IF LP Exp RP Stmt
   29     | IF LP Exp RP Stmt ELSE Stmt
   30     | WHILE LP Exp RP Stmt
   31     | FOR LP FORDEC RP Stmt

   32 FORDEC: Exp SEMI Exp SEMI Exp
   33       | SEMI Exp SEMI Exp

   34 DefList: /* empty */
   35        | Def DefList
   36        | error SEMI

   37 Def: Specifier DecList SEMI

   38 DecList: Dec
   39        | Dec COMMA DecList

   40 Dec: VarDec
   41    | VarDec ASSIGNOP Exp

   42 Exp: Exp ASSIGNOP Exp
   43    | Exp AND Exp
   44    | Exp OR Exp
   45    | Exp RELOP Exp
   46    | Exp PLUS Exp
   47    | Exp PLUS PLUS
   48    | PLUS PLUS Exp
   49    | Exp PLUS ASSIGNOP Exp
   50    | Exp MINUS Exp
   51    | Exp MINUS MINUS
   52    | MINUS MINUS Exp
   53    | Exp MINUS ASSIGNOP Exp
   54    | Exp STAR Exp
   55    | Exp STAR ASSIGNOP Exp
   56    | Exp DIV Exp
   57    | Exp DIV ASSIGNOP Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | Exp DOT ID
   62    | Exp LB Exp RB
   63    | ID LP Args RP
   64    | ID LP RP
   65    | ID
   66    | INT
   67    | FLOAT
   68    | CHAR
   69    | STRING

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 6 36
INT (258) 16 66
ID (259) 10 12 15 17 18 61 63 64 65
RELOP (260) 45
TYPE (261) 7
CHAR (262) 68
FLOAT (263) 67
STRING (264) 69
DPLUS (265)
DMINUS (266)
LP (267) 17 18 28 29 30 31 58 63 64
RP (268) 17 18 28 29 30 31 58 63 64
LB (269) 16 62
RB (270) 16 62
LC (271) 9 22
RC (272) 9 22
SEMI (273) 4 6 25 27 32 33 36 37
COMMA (274) 14 20 39 70
DOT (275) 61
ASSIGNOP_MINUS (276)
ASSIGNOP_PLUS (277)
ASSIGNOP_DIV (278)
ASSIGNOP_STAR (279)
PLUS (280) 46 47 48 49
MINUS (281) 50 51 52 53 59
STAR (282) 54 55
DIV (283) 56 57
ASSIGNOP (284) 41 42 49 53 55 57
AND (285) 43
OR (286) 44
NOT (287) 60
IF (288) 28 29
ELSE (289) 29
WHILE (290) 30
RETURN (291) 27
FOR (292) 31
SWITCH (293)
CASE (294)
COLON (295)
DEFAULT (296)
ARRAY (297)
STRUCT (298) 9 10
EXP_STRUCT (299)
UMINUS (300)
LOWER_THEN_ELSE (301)


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1, on right: 0
ExtDefList (49)
    on left: 2 3, on right: 1 3
ExtDef (50)
    on left: 4 5 6, on right: 3
Specifier (51)
    on left: 7 8, on right: 4 5 21 37
StructSpecifier (52)
    on left: 9 10, on right: 8
StructName (53)
    on left: 11 12, on right: 9
ExtDecList (54)
    on left: 13 14, on right: 4 14
VarDec (55)
    on left: 15 16, on right: 13 14 16 21 40 41
FuncDec (56)
    on left: 17 18, on right: 5
VarList (57)
    on left: 19 20, on right: 17 20
ParamDec (58)
    on left: 21, on right: 19 20
CompSt (59)
    on left: 22, on right: 5 26
StmList (60)
    on left: 23 24, on right: 22 24
Stmt (61)
    on left: 25 26 27 28 29 30 31, on right: 24 28 29 30 31
FORDEC (62)
    on left: 32 33, on right: 31
DefList (63)
    on left: 34 35 36, on right: 9 22 35
Def (64)
    on left: 37, on right: 35
DecList (65)
    on left: 38 39, on right: 37 39
Dec (66)
    on left: 40 41, on right: 38 39
Exp (67)
    on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59
    60 61 62 63 64 65 66 67 68 69, on right: 25 27 28 29 30 32 33 41
    42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
    70 71
Args (68)
    on left: 70 71, on right: 63 70


state 0

    0 $accept: . program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    6 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

    7 Specifier: TYPE .

    $default  reduce using rule 7 (Specifier)


state 3

    9 StructSpecifier: STRUCT . StructName LC DefList RC
   10                | STRUCT . ID

    ID  shift, and go to state 10

    $default  reduce using rule 11 (StructName)

    StructName  go to state 11


state 4

    0 $accept: program . $end

    $end  shift, and go to state 12


state 5

    1 program: ExtDefList .

    $default  reduce using rule 1 (program)


state 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . FuncDec CompSt

    ID  shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FuncDec     go to state 17


state 8

    8 Specifier: StructSpecifier .

    $default  reduce using rule 8 (Specifier)


state 9

    6 ExtDef: error SEMI .

    $default  reduce using rule 6 (ExtDef)


state 10

   10 StructSpecifier: STRUCT ID .
   12 StructName: ID .

    LC        reduce using rule 12 (StructName)
    $default  reduce using rule 10 (StructSpecifier)


state 11

    9 StructSpecifier: STRUCT StructName . LC DefList RC

    LC  shift, and go to state 18


state 12

    0 $accept: program $end .

    $default  accept


state 13

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 14

   15 VarDec: ID .
   17 FuncDec: ID . LP VarList RP
   18        | ID . LP RP

    LP  shift, and go to state 19

    $default  reduce using rule 15 (VarDec)


state 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


state 16

   13 ExtDecList: VarDec .
   14           | VarDec . COMMA ExtDecList
   16 VarDec: VarDec . LB INT RB

    LB     shift, and go to state 21
    COMMA  shift, and go to state 22

    $default  reduce using rule 13 (ExtDecList)


state 17

    5 ExtDef: Specifier FuncDec . CompSt

    LC  shift, and go to state 23

    CompSt  go to state 24


state 18

    9 StructSpecifier: STRUCT StructName LC . DefList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 34 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 8
    DefList          go to state 27
    Def              go to state 28


state 19

   17 FuncDec: ID LP . VarList RP
   18        | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 29
    STRUCT  shift, and go to state 3

    Specifier        go to state 30
    StructSpecifier  go to state 8
    VarList          go to state 31
    ParamDec         go to state 32


state 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 21

   16 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 33


state 22

   14 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 16


state 23

   22 CompSt: LC . DefList StmList RC

    error   shift, and go to state 25
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    CHAR    reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    STRING  reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    PLUS    reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    FOR     reduce using rule 34 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 8
    DefList          go to state 36
    Def              go to state 28


state 24

    5 ExtDef: Specifier FuncDec CompSt .

    $default  reduce using rule 5 (ExtDef)


state 25

   36 DefList: error . SEMI

    SEMI  shift, and go to state 37


state 26

   37 Def: Specifier . DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


state 27

    9 StructSpecifier: STRUCT StructName LC DefList . RC

    RC  shift, and go to state 41


state 28

   35 DefList: Def . DefList

    error   shift, and go to state 25
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    INT     reduce using rule 34 (DefList)
    ID      reduce using rule 34 (DefList)
    CHAR    reduce using rule 34 (DefList)
    FLOAT   reduce using rule 34 (DefList)
    STRING  reduce using rule 34 (DefList)
    LP      reduce using rule 34 (DefList)
    LC      reduce using rule 34 (DefList)
    RC      reduce using rule 34 (DefList)
    PLUS    reduce using rule 34 (DefList)
    MINUS   reduce using rule 34 (DefList)
    NOT     reduce using rule 34 (DefList)
    IF      reduce using rule 34 (DefList)
    WHILE   reduce using rule 34 (DefList)
    RETURN  reduce using rule 34 (DefList)
    FOR     reduce using rule 34 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 28


state 29

   18 FuncDec: ID LP RP .

    $default  reduce using rule 18 (FuncDec)


state 30

   21 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 43


state 31

   17 FuncDec: ID LP VarList . RP

    RP  shift, and go to state 44


state 32

   19 VarList: ParamDec .
   20        | ParamDec . COMMA VarList

    COMMA  shift, and go to state 45

    $default  reduce using rule 19 (VarList)


state 33

   16 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 46


state 34

   15 VarDec: ID .

    $default  reduce using rule 15 (VarDec)


state 35

   14 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 14 (ExtDecList)


state 36

   22 CompSt: LC DefList . StmList RC

    INT     shift, and go to state 47
    ID      shift, and go to state 48
    CHAR    shift, and go to state 49
    FLOAT   shift, and go to state 50
    STRING  shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 23
    PLUS    shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    RETURN  shift, and go to state 58
    FOR     shift, and go to state 59

    $default  reduce using rule 23 (StmList)

    CompSt   go to state 60
    StmList  go to state 61
    Stmt     go to state 62
    Exp      go to state 63


state 37

   36 DefList: error SEMI .

    $default  reduce using rule 36 (DefList)


state 38

   16 VarDec: VarDec . LB INT RB
   40 Dec: VarDec .
   41    | VarDec . ASSIGNOP Exp

    LB        shift, and go to state 21
    ASSIGNOP  shift, and go to state 64

    $default  reduce using rule 40 (Dec)


state 39

   37 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 65


state 40

   38 DecList: Dec .
   39        | Dec . COMMA DecList

    COMMA  shift, and go to state 66

    $default  reduce using rule 38 (DecList)


state 41

    9 StructSpecifier: STRUCT StructName LC DefList RC .

    $default  reduce using rule 9 (StructSpecifier)


state 42

   35 DefList: Def DefList .

    $default  reduce using rule 35 (DefList)


state 43

   16 VarDec: VarDec . LB INT RB
   21 ParamDec: Specifier VarDec .

    LB  shift, and go to state 21

    $default  reduce using rule 21 (ParamDec)


state 44

   17 FuncDec: ID LP VarList RP .

    $default  reduce using rule 17 (FuncDec)


state 45

   20 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 30
    StructSpecifier  go to state 8
    VarList          go to state 67
    ParamDec         go to state 32


state 46

   16 VarDec: VarDec LB INT RB .

    $default  reduce using rule 16 (VarDec)


state 47

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


state 48

   63 Exp: ID . LP Args RP
   64    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 68

    $default  reduce using rule 65 (Exp)


state 49

   68 Exp: CHAR .

    $default  reduce using rule 68 (Exp)


state 50

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


state 51

   69 Exp: STRING .

    $default  reduce using rule 69 (Exp)


state 52

   58 Exp: LP . Exp RP

    INT     shift, and go to state 47
    ID      shift, and go to state 48
    CHAR    shift, and go to state 49
    FLOAT   shift, and go to state 50
    STRING  shift, and go to state 51
    LP      shift, and go to state 52
    PLUS    shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55

    Exp  go to state 69


state 53

   48 Exp: PLUS . PLUS Exp

    PLUS  shift, and go to state 70


state 54

   52 Exp: MINUS . MINUS Exp
   59    | MINUS . Exp

    INT     shift, and go to state 47
    ID      shift, and go to state 48
    CHAR    shift, and go to state 49
    FLOAT   shift, and go to state 50
    STRING  shift, and go to state 51
    LP      shift, and go to state 52
    PLUS    shift, and go to state 53
    MINUS   shift, and go to state 71
    NOT     shift, and go to state 55

    Exp  go to state 72


state 55

   60 Exp: NOT . Exp

    INT     shift, and go to state 47
    ID      shift, and go to state 48
    CHAR    shift, and go to state 49
    FLOAT   shift, and go to state 50
    STRING  shift, and go to state 51
    LP      shift, and go to state 52
    PLUS    shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55

    Exp  go to state 73


state 56

   28 Stmt: IF . LP Exp RP Stmt
   29     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 74


state 57

   30 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 75


state 58

   27 Stmt: RETURN . Exp SEMI

    INT     shift, and go to state 47
    ID      shift, and go to state 48
    CHAR    shift, and go to state 49
    FLOAT   shift, and go to state 50
    STRING  shift, and go to state 51
    LP      shift, and go to state 52
    PLUS    shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55

    Exp  go to state 76


state 59

   31 Stmt: FOR . LP FORDEC RP Stmt

    LP  shift, and go to state 77


state 60

   26 Stmt: CompSt .

    $default  reduce using rule 26 (Stmt)


state 61

   22 CompSt: LC DefList StmList . RC

    RC  shift, and go to state 78


state 62

   24 StmList: Stmt . StmList

    INT     shift, and go to state 47
    ID      shift, and go to state 48
    CHAR    shift, and go to state 49
    FLOAT   shift, and go to state 50
    STRING  shift, and go to state 51
    LP      shift, and go to state 52
    LC      shift, and go to state 23
    PLUS    shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    RETURN  shift, and go to state 58
    FOR     shift, and go to state 59

    $default  reduce using rule 23 (StmList)

    CompSt   go to state 60
    StmList  go to state 79
    Stmt     go to state 62
    Exp      go to state 63


state 63

   25 Stmt: Exp . SEMI
   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . PLUS PLUS
   49    | Exp . PLUS ASSIGNOP Exp
   50    | Exp . MINUS Exp
   51    | Exp . MINUS MINUS
   53    | Exp . MINUS ASSIGNOP Exp
   54    | Exp . STAR Exp
   55    | Exp . STAR ASSIGNOP Exp
   56    | Exp . DIV Exp
   57    | Exp . DIV ASSIGNOP Exp
   61    | Exp . DOT ID
   62    | Exp . LB Exp RB

    RELOP     shift, and go to state 80
    LB        shift, and go to state 81
    SEMI      shift, and go to state 82
    DOT       shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    AND       shift, and go to state 89
    OR        shift, and go to state 90


state 64

   41 Dec: VarDec ASSIGNOP . Exp

    INT     shift, and go to state 47
    ID      shift, and go to state 48
    CHAR    shift, and go to state 49
    FLOAT   shift, and go to state 50
    STRING  shift, and go to state 51
    LP      shift, and go to state 52
    PLUS    shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55

    Exp  go to state 91


state 65

   37 Def: Specifier DecList SEMI .

    $default  reduce using rule 37 (Def)


state 66

   39 DecList: Dec COMMA . DecList

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 92
    Dec      go to state 40


state 67

   20 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 20 (VarList)


state 68

   63 Exp: ID LP . Args RP
   64    | ID LP . RP

    INT     shift, and go to state 47
    ID      shift, and go to state 48
    CHAR    shift, and go to state 49
    FLOAT   shift, and go to state 50
    STRING  shift, and go to state 51
    LP      shift, and go to state 52
    RP      shift, and go to state 93
    PLUS    shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55

    Exp   go to state 94
    Args  go to state 95


state 69

   42 Exp: Exp . ASSIGNOP Exp
   43    | Exp . AND Exp
   44    | Exp . OR Exp
   45    | Exp . RELOP Exp
   46    | Exp . PLUS Exp
   47    | Exp . PLUS PLUS
   49    | Exp . PLUS ASSIGNOP Exp
   50    | Exp . MINUS Exp
   51    | Exp . MINUS MINUS
   53    | Exp . MINUS ASSIGNOP Exp
   54    | Exp . STAR Exp
   55    | Exp . STAR ASSIGNOP Exp
   56    | Exp . DIV Exp
   57    | Exp . DIV ASSIGNOP Exp
   58    | LP Exp . RP
   61    | Exp . DOT ID
   62    | Exp . LB Exp RB

    RELOP     shift, and go to state 80
    RP        shift, and go to state 96
    LB        shift, and go to state 81
    DOT       shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
